--- a/android-pdfview/build.gradle
+++ b/android-pdfview/build.gradle
@@ -1,10 +1,10 @@
-apply plugin: 'android-library'
+apply plugin: 'com.android.library'
 
 description = 'android-pdfview'
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion '19.0.3'
+    compileSdkVersion 23
+    buildToolsVersion "23.0.2"
 
     sourceSets {
         main {
